--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,8 @@
     <module>shell</module>
     <module>hive</module>
     <module>phoenix</module>
+    <module>pig</module>
+    <module>geode</module>
     <module>postgresql</module>
     <module>jdbc</module>
     <module>tajo</module>
